remove table view

--- a/styles.css
+++ b/styles.css
@@ -131,11 +131,11 @@ margin-bottom: 20px;
     }
 }
 
-@media screen and (min-width:1022px) and (max-width:1339px){
+/* @media screen and (min-width:1022px) and (max-width:1339px){
     .nav-items{
         font-size: 0.4rem;
     }
-}
+} */
 
 
 .nav-items li{
@@ -159,13 +159,13 @@ button {
     padding:6px 20px 6px 20px;
 }
 
-@media screen and (min-width:1022px) and (max-width:1339px){
+/* @media screen and (min-width:1022px) and (max-width:1339px){
     button {
         font-size: 0.5rem;
         padding:4px 15px;
     }
     
-}
+} */
 
 .nav-buttons{
     gap: 5px;
@@ -238,13 +238,13 @@ button {
     width: 100%;
 }
 
-@media screen and (min-width:1022px) and (max-width:1339px){
+/* @media screen and (min-width:1022px) and (max-width:1339px){
    
     
 .text-section h1 {
     font-size: 2rem;
 }
-    }
+    } */
 
 
 
@@ -272,13 +272,13 @@ button {
    width: 306px;
 }
 
-@media screen and (min-width:1022px) and (max-width:1339px){
+/* @media screen and (min-width:1022px) and (max-width:1339px){
    
 .image-section img{
     height: 250px;
     width: 256px;
  }
-}
+} */
 
 
 
@@ -324,12 +324,12 @@ button {
    
 }
 
-@media screen and (min-width:1022px) and (max-width:1339px) {
+/* @media screen and (min-width:1022px) and (max-width:1339px) {
     .service-section{
         padding: 7% 10%;
         
      }
-}
+} */
 
 
 
@@ -452,11 +452,11 @@ button {
 
 }
 
-@media screen and (min-width:1022px) and (max-width:1339px){
+/* @media screen and (min-width:1022px) and (max-width:1339px){
     .stat-section h3{
         font-size: 1.5rem;
     }
-}
+} */
 
 .stat-section p{
     font-size: 0.7rem;
@@ -850,7 +850,7 @@ footer{
 
 }
 
-@media screen and (min-width:1022px) and (max-width:1339px){
+/* @media screen and (min-width:1022px) and (max-width:1339px){
     .right li{
         font-size: 0.4rem;
     
@@ -864,7 +864,7 @@ footer{
         font-size: 0.5rem;
     }
     
-}
+} */
 
 
 .right ul .head{
